--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,5 +7,5 @@ prune docs
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle .idea/**
 
-include README.md LICENSE
+include README.md LICENSE LICENSE-CC0
 exclude tox.ini .readthedocs.yml .cruft.json CITATION.cff docker-compose.yml Dockerfile noxfile.py
