--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,11 +49,11 @@ license = { file = "LICENSE" }
 
 requires-python = ">=3.10"
 dependencies = [
-    "more_itertools", # missing from itertools in stdlib
-    "tqdm", # progress bars
-    "click",
-    "more_click",
-    "typing-extensions",
+    "pydantic",
+    "pycountry",
+    "pydantic_extra_types",
+    "semantic-pydantic",
+    "tqdm",
 ]
 
 [project.optional-dependencies]
@@ -70,6 +70,10 @@ docs = [
     # To include LaTeX comments easily in your docs.
     # If you uncomment this, don't forget to do the same in docs/conf.py
     # texext
+]
+ontology-export = [
+    "pyobo",
+    "bioontologies",
 ]
 
 # See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
