--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ prune scripts
 prune notebooks
 prune tests/.pytest_cache
 prune docs
+prune output
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle .idea/**
 
