Update mode, I/O, and testing

--- a/tox.ini
+++ b/tox.ini
@@ -114,7 +114,8 @@ description = Run the mypy tool to check static typing on the project.
 deps =
     mypy
     pydantic
-commands = mypy --install-types --non-interactive --ignore-missing-imports --strict src/
+    types-requests
+commands = mypy --ignore-missing-imports --strict src/ tests/
 
 [testenv:doc8]
 skip_install = true
