--- a/tox.ini
+++ b/tox.ini
@@ -149,9 +149,8 @@ commands =
 [testenv:docs]
 description = Build the documentation locally, allowing warnings.
 extras =
-    # See the [project.optional-dependencies] entry in pyproject.toml for "docs"
     docs
-    # You might need to add additional extras if your documentation covers it
+    ontology-export
 commands =
     python -m sphinx -b html -d docs/build/doctrees docs/source docs/build/html
 
